--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1781,8 +1781,19 @@ DESKTOP
 .home-page .services .services-card:hover {
   transform: translateY(-5px);
 }
-.home-page .services .services-card h3 {
+.home-page .services .services-card .services-title {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
   margin-bottom: 1rem;
+}
+.home-page .services .services-card .services-title i {
+  font-size: 35px;
+  color: #4f5bd5;
+  flex-shrink: 0;
+}
+.home-page .services .services-card .services-title h3 {
+  margin: 0;
 }
 .home-page .services .services-card p {
   flex: 1;
